# mlops-mnist-example

./: .gitignore  README.md  config.py  hw_3_report.md  infer.py  main.py  pyproject.toml  run_server.py  train.py
.dvc/: config
.github/workflows/: test.yml
conf/: config.yaml
configs/: models.yaml  server.yaml
data/MNIST/raw/: .gitignore
mnist_example/: datasets.py  eval.py  models.py  train.py  train_eval.py
models/: .gitignore  cnn.onnx.dvc  cnn.pt.dvc  fcn.onnx.dvc  fcn.pt.dvc
source/: conf.py  index.rst
tests/: test_sample.py  test_train.py
triton_server/: client.py  docker-compose.yaml  image_example.npy  requirements.txt
triton_server/model_repository/cnn_onnx/: config.pbtxt
