[tool.poetry]
name = "mlops-mnist-example"
version = "0.1.0"
description = "A simple example of MNIST classification for an MLOps course. I couldn't think of anything better :) In the future, I will screw up some of my own project."
authors = ["Maksim Potorochin <maksimpotorochin@yandex.ru>"]
readme = "README.md"
packages = [{include = "mlops_mnist_example"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
