[tool.poetry]
name = "mlops-mnist-example"
version = "0.1.0"
description = "A simple example of MNIST classification for an MLOps course."
authors = ["Maksim Potorochin <maksimpotorochin@yandex.ru>"]
readme = "README.md"
packages = [{include = "mlops_mnist_example"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
src_paths = ["mnist_example"]
profile = "black"
line_length = 88
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
